# serializer version: 1
# name: test_delivery_cli_with_delivery_file
  '''
  {
    "delivery_id": "20120114T120001-product1-2824",
    "operations_responses": [
      {
        "delivery_id": "20120114T120001-product1-2824"
      },
      {
        "delivery_id": "20120114T120001-product1-2824",
        "files_uploaded": [
          "tests/resources/file1.txt",
          "tests/resources/file2.txt"
        ]
      }
    ]
  }
  '''
# ---
# name: test_delivery_early_exit_with_validation_error
  '''
  {
    "delivery_id": null,
    "fatal_error": "Some files failed validation: [invalid - extra_file.txt: File path does not exist.]. Delivery cancelled. No manifest will be created.",
    "operations_responses": []
  }
  '''
# ---
# name: test_delivery_python_interface
  '''
  {
    "delivery_id": "20120114T120001-product1-2824",
    "fatal_error": null,
    "operations_responses": [
      {
        "delivery_id": "20120114T120001-product1-2824",
        "fatal_error": null
      },
      {
        "delivery_id": "20120114T120001-product1-2824",
        "fatal_error": null,
        "files_uploaded": [
          "tests/resources/file1.txt",
          "tests/resources/file2.txt"
        ],
        "files_invalid": [],
        "files_failed": []
      }
    ]
  }
  '''
# ---
# name: test_delivery_python_interface.1
  '''
  {
    "manifest_id": "20120114T120001-product1-2824",
    "pushing_entity_id": "GLO-MERCATOR-TOULOUSE-FR",
    "product_id": "product1",
    "dataset_id": "dataset1",
    "operations": [
      {
        "operation": "delete",
        "status": "todo",
        "status_timestamp": null,
        "error": null,
        "files": [
          {
            "key_suffix": "tests/resources/file1.txt",
            "file_size": null,
            "checksum": null,
            "status": "todo",
            "status_timestamp": null,
            "error": null
          },
          {
            "key_suffix": "tests/resources/file2.txt",
            "file_size": null,
            "checksum": null,
            "status": "todo",
            "status_timestamp": null,
            "error": null
          }
        ]
      },
      {
        "operation": "upload",
        "status": "todo",
        "status_timestamp": null,
        "error": null,
        "files": [
          {
            "key_suffix": "tests/resources/file1.txt",
            "file_size": 0,
            "checksum": "c08af741236b563ed7ac6e240623a6f5-1",
            "status": "todo",
            "status_timestamp": null,
            "error": null
          },
          {
            "key_suffix": "tests/resources/file2.txt",
            "file_size": 0,
            "checksum": "727a3ead5c2a5492759091a67cb31068-1",
            "status": "todo",
            "status_timestamp": null,
            "error": null
          }
        ]
      }
    ],
    "creation_time": "2012-01-14T12:00:01+00:00",
    "status": "todo",
    "status_timestamp": null,
    "error": null
  }
  '''
# ---
